--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	</main>
 	<footer>
 	
-		<p>&copy;2018, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy;2022 March 9 | Jessica Vecchio</p>
 		
 	</footer>
 </body>
